<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.translation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.translation.ui.webtranslate.TranslateFragment"
        android:label="@string/menu_wt"
        tools:layout="@layout/fragment_translate" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.translation.ui.dictionary.DictionaryFragment"
        android:label="@string/menu_dic"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="com.example.translation.ui.settings.SettingFragment"
        android:label="@string/menu_st"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.translation.ui.login.ui.login.LoginFragment"
        android:label="@string/menu_lg"
        tools:layout="@layout/fragment_login" />

</navigation>